k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  labels:
    app: test-pod
  annotations:
    secretless.externalsecrets.com/externalsecret: "test-app-secrets"
    # secretless.externalsecrets.com/env-vars: "true"
    secretless.externalsecrets.com/file-secrets: "true"
spec:
  serviceAccountName: default
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "while true; do env | grep API; cat /mnt/secrets/config.json; sleep 10; done"]
    resources:
      limits:
        cpu: 100m
        memory: 64Mi
      requests:
        cpu: 50m
        memory: 32Mi
